test/corpus/let_bindings.txt
================================================================================
Plain
================================================================================

let a = 5
let b = a
let c = #foo
let list = 1
let a = list
let async = 1
let unpack = 2
export d = 5

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (number)))
  (let_declaration
    (let_binding
      (value_name)
      (value_name)))
  (let_declaration
    (let_binding
      (value_name)
      (polyvar)))
  (let_declaration
    (let_binding
      (value_name)
      (number)))
  (let_declaration
    (let_binding
      (value_name)
      (value_name)))
  (let_declaration
    (let_binding
      (value_name)
      (number)))
  (let_declaration
    (let_binding
      (value_name)
      (number)))
  (let_declaration
    (let_binding
      (value_name)
      (number))))

================================================================================
Tuple destructuring
================================================================================

let (a, b, (c, d)) = foo
let (state: int, setState) = foo
let (a, b, ()) = foo

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (tuple_pattern
        (tuple_item_pattern
          (value_name))
        (tuple_item_pattern
          (value_name))
        (tuple_item_pattern
          (tuple_pattern
            (tuple_item_pattern
              (value_name))
            (tuple_item_pattern
              (value_name)))))
      (value_name)))
  (let_declaration
    (let_binding
      (tuple_pattern
        (tuple_item_pattern
          (value_name)
          (type_annotation
            (type_constructor_path
              (type_constructor))))
        (tuple_item_pattern
          (value_name)))
      (value_name)))
  (let_declaration
    (let_binding
      (tuple_pattern
        (tuple_item_pattern
          (value_name))
        (tuple_item_pattern
          (value_name))
        (tuple_item_pattern
          (unit)))
      (value_name))))

================================================================================
Record destructuring
================================================================================

let {bar, baz} = foo
let {bar, baz: qux} = foo
let {Bar.Bar.bar: bar} = foo

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (record_pattern
        (value_path
          (value_name))
        (value_path
          (value_name)))
      (value_name)))
  (let_declaration
    (let_binding
      (record_pattern
        (value_path
          (value_name))
        (value_path
          (value_name))
        (value_name))
      (value_name)))
  (let_declaration
    (let_binding
      (record_pattern
        (value_path
          (module_path
            (module_path
              (module_name))
            (module_name))
          (value_name))
        (value_name))
      (value_name))))

================================================================================
Array destructuring
================================================================================

let [bar, baz] = foo
let [bar, baz, _] = foo

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (array_pattern
        (value_name)
        (value_name))
      (value_name)))
  (let_declaration
    (let_binding
      (array_pattern
        (value_name)
        (value_name)
        (value_name))
      (value_name))))

================================================================================
List destructuring
================================================================================

let list{head, ...tail} = foo

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (list_pattern
        (value_name)
        (spread_pattern
          (value_name)))
      (value_name))))

================================================================================
Block
================================================================================

let x = {
  3
  4
}

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (block
        (expression_statement
          (number))
        (expression_statement
          (number))))))

================================================================================
Annotated
================================================================================

let a: int = 5
let b: 'a => unit = ignore

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (type_annotation
        (type_constructor_path
          (type_constructor)))
      (number)))
  (let_declaration
    (let_binding
      (value_name)
      (type_annotation
        (function_type
          (function_type_parameters
            (type_constructor_path
              (type_constructor)))
          (unit_type)))
      (value_name))))

================================================================================
Recursive
================================================================================

let rec foo = n => foo(n-1)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (function
        (value_name)
        (call_expression
          (value_name)
          (arguments
            (binary_expression
              (value_name)
              (number))))))))

================================================================================
Unit
================================================================================

let () = noop

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (unit)
      (value_name))))

================================================================================
And (Primitives)
================================================================================

let a = 5 and b = 4

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (number))
    (let_binding
      (value_name)
      (number))))

================================================================================
And (Functions)
================================================================================

let rec a = x => x + b(x) and b = y => y - 1

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (function
        (value_name)
        (binary_expression
          (value_name)
          (call_expression
            (value_name)
            (arguments
              (value_name))))))
    (let_binding
      (value_name)
      (function
        (value_name)
        (binary_expression
          (value_name)
          (number))))))

================================================================================
And (decorated)
================================================================================

@one
let rec a = b
@two @three
and b = c

@four and c = 42

--------------------------------------------------------------------------------

(source_file
  (decorator
    (decorator_identifier))
  (let_declaration
    (let_binding
      (value_name)
      (value_name))
    (decorator
      (decorator_identifier))
    (decorator
      (decorator_identifier))
    (let_binding
      (value_name)
      (value_name))
    (decorator
      (decorator_identifier))
    (let_binding
      (value_name)
      (number))))

================================================================================
Labled function with uncurried
================================================================================

let test = (. ~attr) => ()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (function
        (formal_parameters
          (parameter
            (uncurry)
            (labeled_parameter
              (value_name))))
        (unit)))))

================================================================================
Destructuring module
================================================================================


let {foo, bar} = module(User)
let {baz, _} = module(User.Inner)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (record_pattern
        (value_path
          (value_name))
        (value_path
          (value_name)))
      (package_expression
        (module_path
          (module_name)))))
  (let_declaration
    (let_binding
      (record_pattern
        (value_path
          (value_name))
        (value_path
          (value_name)))
      (package_expression
        (module_path
          (module_path
            (module_name))
          (module_name))))))

================================================================================
Packing module
================================================================================

let foo = module(Bar)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (value_name)
      (package_expression
        (module_path
          (module_name))))))

================================================================================
Unpacking module
================================================================================

let module(Bar) = foo

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (package_pattern
        (module_name))
      (value_name))))

================================================================================
Lazy Values
================================================================================

let lazy x = lazy(1)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (let_binding
      (lazy_pattern
        (value_name))
      (lazy_expression
        (parenthesized_expression
          (number))))))
